<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resultsPage">


    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        >

        <TextView
        android:layout_marginTop="30dp"
            android:id="@+id/firstBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#77BAFB"
            android:text="@string/first_box"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="#77BAFB"
            android:id="@+id/secondBox"
            android:text="@string/second_box"
            android:textSize="24sp"
            android:layout_centerInParent="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="#77BAFB"
            android:id="@+id/thirdBox"
            android:text="@string/third_box"
            android:textSize="24sp"
          android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            />

    </RelativeLayout>


</RelativeLayout>